[project]
name = "image-sat"
description = "Image segmentation annotation tool"
authors = [{ name = "moykeen" }]
requires-python = ">=3.13"
dependencies = [
    "PyQt5",
    "dill>=0.4.0",
    "dotenv>=0.9.9",
    "ipython>=9.3.0",
    "numpy",
    "torch>=2.7.1",
    "ultralytics>=8.3.156",
]
version = "1.0.0"
